--- a/app/src/main/res/layout/activity_otp.xml
+++ b/app/src/main/res/layout/activity_otp.xml
@@ -7,6 +7,7 @@
     android:gravity="center"
     android:orientation="vertical"
     tools:context=".MainActivity"
+    android:layout_gravity="center"
     android:padding="10dp">
 
     <TextView
@@ -18,10 +19,25 @@
         android:textSize="16sp"
         android:textStyle="bold" />
 
+<!--    <com.rkrzmail.srv.OtpEditText-->
+<!--        android:id="@+id/et_otp"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:cursorVisible="false"-->
+<!--        android:textColor="@android:color/white"-->
+<!--        android:digits="1234567890"-->
+<!--        android:inputType="number"-->
+<!--        android:text="4"-->
+<!--        android:maxLength="4"-->
+<!--        android:textIsSelectable="false"-->
+<!--        android:textSize="20sp"-->
+<!--        android:layout_marginTop="20dp"/>-->
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
+        android:layout_marginBottom="20dp"
         android:orientation="horizontal">
 
         <EditText
@@ -43,7 +59,7 @@
             android:layout_width="10dp"
             android:layout_height="0dp" />
 
-        <EditText
+        <com.rkrzmail.srv.ZanyEditText
             android:id="@+id/et2"
             android:layout_width="45dp"
             android:layout_height="45dp"
@@ -123,12 +139,12 @@
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginTop="100dp">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="200dp"
             android:text="Belum Terima OTP?"
             android:textColor="@android:color/white"
             android:textSize="16sp"
@@ -138,7 +154,6 @@
             android:id="@+id/tv_reqOtp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="200dp"
             android:textColor="@android:color/white"
             android:textSize="16sp"
             android:textStyle="bold"
