--- a/app/src/main/res/layout/activity_atur_discount_loyalty.xml
+++ b/app/src/main/res/layout/activity_atur_discount_loyalty.xml
@@ -18,42 +18,6 @@
             android:orientation="vertical"
             android:padding="5dp">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/paddingMedium"
-                android:layout_marginBottom="@dimen/paddingMedium"
-                android:gravity="center"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:layout_height="wrap_content"
-                    android:text="KATEGORI DISCOUNT"
-                    android:layout_width="0dp"
-                    android:layout_weight="3"
-                    android:textColor="@color/grey_900"
-                    android:textStyle="bold"
-                    android:textSize="12sp"/>
-
-                <Button
-                    android:id="@+id/btn_kategori_disc"
-                    android:layout_width="0dp"
-                    android:layout_height="34dp"
-                    android:layout_weight="6"
-                    android:background="@drawable/background_edittext"
-                    android:drawableEnd="@drawable/ic_arrow_down"
-                    android:drawablePadding="5dp"
-                    android:drawableTint="@color/grey_800"
-                    android:padding="5dp"
-                    android:text="@string/pilih_uppercase"
-                    android:textAlignment="center" />
-
-            </LinearLayout>
-
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/rv_kategori_disc"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
 
             <FrameLayout
                 android:layout_width="match_parent"
@@ -173,6 +137,35 @@
 
             </LinearLayout>
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/paddingMedium"
+                android:gravity="center"
+                android:layout_marginTop="15dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="4"
+                    android:text="@string/paket_layanan_uppercase"
+                    android:textColor="@color/grey_900"
+                    android:textSize="12sp"
+                    android:textStyle="bold" />
+
+                <Button
+                    android:id="@+id/btn_layanan"
+                    android:layout_width="0dp"
+                    android:layout_height="34dp"
+                    android:layout_weight="6"
+                    android:background="@drawable/state_textview_clickable_border"
+                    android:drawableEnd="@drawable/ic_arrow_drop_down"
+                    android:text="@string/pilih_uppercase"
+                    android:textAlignment="center" />
+
+            </LinearLayout>
+
             <android.support.design.widget.TextInputLayout
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
@@ -180,10 +173,28 @@
                 android:layout_marginTop="10dp">
 
                 <EditText
-                    android:id="@+id/et_disc"
+                    android:id="@+id/et_disc_layanan"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="@string/discount_percent_uppercase"
+                    android:hint="DISCOUNT LAYANAN"
+                    android:inputType="numberSigned"
+                    android:maxLength="5"
+                    android:textSize="14sp"
+                    tools:ignore="Autofill" />
+
+            </android.support.design.widget.TextInputLayout>
+
+            <android.support.design.widget.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp">
+
+                <EditText
+                    android:id="@+id/et_disc_part"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/discount_part_uppercase"
                     android:inputType="numberSigned"
                     android:maxLength="5"
                     android:textSize="14sp"
